--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title> tsm </title>
 </head>
 <body>
+    <p> i am sad why it is not connected !!</p>
     <div id="app"></div>
     <script src="./app.tsx" ></script>
    
