--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <p> i am sad why it is not connected !!</p>
     <div id="app"></div>
     <script src="./app.tsx" ></script>
+    <script src="/app.tsx"></script>
    
 
 </body>
