--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <p> i am sad why it is not connected !!</p>
     <div id="app"></div>
-    <script  src="./app.tsx" ></script>
+    <script  type="module" src="./app.tsx" ></script>
 
    
 
