--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <p> i am sad why it is not connected !!</p>
     <p> showing to abrar !!</p>
     <div id="app"></div>
-    <script  type="module" src="./app.tsx" ></script>
+    <script  type="module" src="/app.tsx" ></script>
 
    
 
