--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 
-    <title> tsm </title>
+    <title> Makkah Transport System Management </title>
 </head>
 <body>
     <p> i am sad why it is not connected !!</p>
     <p> showing to abrar !!</p>
     <div id="app"></div>
-    <script  type="module" src="/app.tsx" ></script>
+    <script   src="/app.tsx" ></script>
 
    
 
