--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 <body>
     <p> i am sad why it is not connected !!</p>
     <p> showing to abrar !!</p>
+    <p> testing </p>
     <div id="app"></div>
-    <script   src="/app.tsx" ></script>
-
-   
-
+    <script src="./app.tsx"></script>
+    
 </body>
 </html>
