--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <p> i am sad why it is not connected !!</p>
     <p> showing to abrar !!</p>
     <p> testing </p>
-    <div id="app"></div>
-    <script  src="./app.tsx"></script>
+    <noscript>
+        You need to enable JavaScript to run this app.
+      </noscript>
+      <div id="app"></div>
+  
+  
 
 </body>
 </html>
