--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
     <p> i am sad why it is not connected !!</p>
     <p> showing to abrar !!</p>
     <p> testing </p>
-    <noscript>
-        You need to enable JavaScript to run this app.
-      </noscript>
-      <div id="app"></div>
-  
-  
+    <div id="app"></div>
+    <script  src="./app.tsx"></script>
 
 </body>
 </html>
